# Dreamhack-Wargame-Crawler

./: .env.example  .gitignore  Makefile  README.md  dreamhack_crawler.py  manifest.json  pyproject.toml
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/challenges/: ChallengeDetailDrawer.tsx  ChallengeFilters.tsx  ChallengeTable.tsx
frontend/src/hooks/: useBackendHealth.ts  useChallenges.ts  useDownloadJobWatcher.ts  useJobs.ts  useSession.ts  useSettings.ts  useStats.ts
frontend/src/pages/: ChallengeDetailPage.tsx  ChallengesPage.tsx  DashboardPage.tsx  JobsPage.tsx  NotFoundPage.tsx  SessionPage.tsx  SettingsPage.tsx
src/dreamhack_local/: __init__.py  app.py  config.py
src/dreamhack_local/api/: app.py
src/dreamhack_local/cli/: app.py
src/dreamhack_local/core/: constants.py  exceptions.py  logging.py
src/dreamhack_local/crawler/: client.py  parser.py
src/dreamhack_local/models/: schemas.py
src/dreamhack_local/services/: challenge_service.py  crawl_service.py  download_service.py  job_service.py  manifest_service.py  session_service.py  workspace_service.py
src/dreamhack_local/storage/: database.py  repository.py
src/dreamhack_local/utils/: files.py  normalization.py  paths.py
tests/: conftest.py  test_api.py  test_cli.py  test_download_service.py  test_parser.py  test_storage.py  test_utils.py
tests/fixtures/: detail_sample.html  listing_sample.html
(+32 files in other folders)
